[project]
name = "himitsu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "protobuf>=5.28.3",
    "sentencepiece>=0.2.0",
    "setuptools>=75.5.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]
