[project]
name = "himitsu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "hf-transfer>=0.1.8",
    "huggingface-hub>=0.26.2",
    "protobuf>=5.28.3",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]
